# Risc0Flow

./: .gitignore  .merkle_input.tmp  CLI.md  Cargo.toml  METRICS.md  README.md  deploy_anvil.sh  deploy_local.sh  deploy_sepolia.sh  mem_test.py  merkle_test.py  merkle_test_generator.py
contracts/: Contract.sol  IContract.sol
host/: Cargo.toml  README.md
lib/openzeppelin-contracts/: CHANGELOG.md
lib/risc0-ethereum/: Cargo.toml
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml  README.md
results/d1024/metrics/: input_79411dba.csv  proving_metrics_13_02_26_08_59.csv  proving_metrics_13_02_26_09_11.csv  session_metrics_13_02_26_08_49.csv  time_groth16_d1024  time_session_d1024  time_stark_d1024  time_verify_d1024  tx_trace_metrics_13_02_26_08_59.csv  verify_metrics_13_02_26_08_59.csv
results/d128/metrics/: input_9b0c10c9.csv  proving_metrics_12_02_26_22_51.csv  proving_metrics_12_02_26_22_57.csv  session_metrics_12_02_26_22_48.csv  time_groth16_d128  time_session_d128  time_stark_d128  time_verify_d128  tx_trace_metrics_12_02_26_22_51.csv  verify_metrics_12_02_26_22_51.csv
results/d2048/metrics/: input_f842406f.csv  proving_metrics_13_02_26_09_31.csv  proving_metrics_13_02_26_09_51.csv  session_metrics_13_02_26_09_13.csv  time_groth16_d2048  time_session_d2048  time_stark_d2048  time_verify_d2048  tx_trace_metrics_13_02_26_09_31.csv  verify_metrics_13_02_26_09_31.csv
results/d256/metrics/: input_6a6eb060.csv  proving_metrics_12_02_26_23_05.csv  proving_metrics_12_02_26_23_12.csv  session_metrics_12_02_26_23_00.csv  time_groth16_d256  time_session_d256  time_stark_d256  time_verify_d256  tx_trace_metrics_12_02_26_23_05.csv  verify_metrics_12_02_26_23_05.csv
results/d32/metrics/: input_3026c7d0.csv  proving_metrics_12_02_26_20_08.csv  proving_metrics_12_02_26_20_12.csv  session_metrics_12_02_26_20_06.csv  time_groth16_d32  time_session_d32  time_stark_d32  time_verify_d32  tx_trace_metrics_12_02_26_20_08.csv  verify_metrics_12_02_26_20_08.csv
results/d4096/metrics/: input_0243c871.csv  proving_metrics_13_02_26_10_33.csv  proving_metrics_13_02_26_11_09.csv  session_metrics_13_02_26_09_57.csv  time_groth16_d4096  time_session_d4096  time_stark_d4096  time_verify_d4096  tx_trace_metrics_13_02_26_10_33.csv  verify_metrics_13_02_26_10_33.csv
results/d512/metrics/: input_9d1db710.csv  proving_metrics_12_02_26_23_31.csv  proving_metrics_12_02_26_23_39.csv  session_metrics_12_02_26_23_24.csv  time_groth16_d512  time_session_d512  time_stark_d512  time_verify_d512  (+2 more)
script/: Deploy.s.sol  config.toml
(+10 files in other folders)
