[workspace]
resolver = "2"
members = ["host", "methods"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy = { version = "1.0", features = ["full"] }
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.0" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1" }
hex = { version = "0.4" }
log = { version = "0.4" }
risc0-build = { version = "3.0.5", features = ["docker"] }
# using git references here to ensure this matches the submodules in ./lib
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.1" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.1" }
risc0-zkvm = { version = "3.0.5", features = ["prove"] }
risc0-zkp = { version = "3.0.5", default-features = false }
serde = { version = "1.0.193", features = ["derive", "std"] }
url = { version = "2.5" }

[profile.release]
debug = 1
lto = true