[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
alloy = { workspace = true }
bincode = { workspace = true }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
hex = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
sysinfo = "0.33"
tokio = { version = "1.36", features = ["full"] }
url = { workspace = true }
