[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "2.3.2" }

[build-dependencies]
risc0-build = { version = "2.3.2", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.2.2" }

[package.metadata.risc0]
methods = ["guest"]
